# autodw

./: .gitignore  README.md  README_ZH.md  pyproject.toml  setup.py
src/autodw.egg-info/: SOURCES.txt  requires.txt
src/connectors/: sqlite.py
src/serializers/: base.py
tests/connectors/: mysql.py  postgresql.py  sqlite.py
tests/serializers/: base.py
tests/sqlparse/: llm_parser.py
