[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodw"
version = "0.1.0"
description = "Database schema serialization with LLM integration for metadata generation and SQL parsing"
authors = [
    { name = "shaobin shi", email = "d7inshi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "mysql-connector-python>=8.0.0",
    "psycopg2-binary>=2.9.0",
    "openai>=0.27.0",
    "sqlparse>=0.4.0",
    "tqdm>=4.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]
llm = ["langchain>=0.1.0", "transformers>=4.0.0"]

[project.scripts]
autodw = "autodw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501", "E731"]